<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper android:id="@+id/add_item_viewFlipper"
    android:layout_height="match_parent"
    android:layout_width ="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context="edu.duke.compsci290.goodfoodgonebad.NewItemActivity">

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_capture"/>
        <Button
            android:id="@+id/button_capture"
            android:layout_alignParentBottom="true"
            android:text="CAPTURE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        >

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/item_name" />

        <EditText
            android:id="@+id/brandName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_name" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/exp_dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_exp" />
        <Button
            android:id ="@+id/submit_new_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ADD_ITEM"
            android:textStyle="bold"/>
    </LinearLayout>
</ViewFlipper>